--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -44,6 +44,7 @@ $topnav-background-color: #222;
         font-size: 18px;
         line-height: 40px;
         padding: 0 25px;
+        margin-left: 20px;
     }
     .rounded-btn:hover,
     .rounded-btn:focus,
